--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,10 @@
 @import 'variables.scss';
+@import 'font.scss';
 
 html, body {
   margin: 0;
   padding: 0;
+  font-family: 'Roboto';
 }
 
 main {
@@ -33,4 +35,9 @@ main {
 
 #main-title {
   font-size: 32px;
+}
+
+#cartoon {
+  max-width: 150px;
+  margin: auto;
 }
